# nendo

./: .env.example  .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  config.example.toml  foundry.toml  package.json  vercel.json
.github/workflows/: ci.yml
.landing-page/init/: extractable-components.md  layouts.md  pages.md  routes.md  theme.md
.superdesign/: design-system.md
.superdesign/init/: components.md
api/: audit.ts  feed.ts  health.ts  policy.ts  stats.ts
contracts/script/: Deploy.s.sol
contracts/src/: INendoAudit.sol  INendoPolicy.sol  NendoAudit.sol  NendoPolicy.sol  NendoRegistry.sol
contracts/test/: Nendo.t.sol
dashboard/: index.html  package-lock.json  package.json
dashboard/server/: index.js  package-lock.json  package.json
dashboard/src/: App.tsx  DashboardPage.tsx  LandingPage.tsx  index.css
dashboard/src/components/: AuditLog.tsx  BackedBySection.tsx  CTASection.tsx  DonutChart.tsx  Footer.tsx  HeroSection.tsx  InfoSection.tsx  KpiCard.tsx  Navbar.tsx  TopBar.tsx  TransactionFeed.tsx  UseCasesSection.tsx
dashboard/src/hooks/: useApi.ts
scripts/: demo.sh
sdk/: package-lock.json  package.json
sdk/src/: index.ts
src/: config.rs  error.rs  logging.rs  main.rs  metrics.rs  policy.rs  proxy.rs  sdk.rs  simulation.rs  traits.rs
