[package]
name = "nendo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
# HTTP server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }

# Ethereum JSON-RPC
ethers = { version = "2.0", features = ["rustls", "ws"] }

# Async runtime
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local audit log
sled = "0.34"

# Config
config = "0.14"

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "nendo"
path = "src/main.rs"