[package]
name = "nendo"
version = "0.1.0"
description = "Agent RPC Firewall for Avalanche — security middleware for autonomous AI agents"
license = "MIT"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP server (hyper)
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP client for RPC calls
reqwest = { version = "0.12", features = ["json"] }

# Bytes handling
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local audit log (embedded key-value store)
sled = "0.34"

# Error handling
anyhow = "1"
thiserror = "2"

# Trait abstractions
async-trait = "0.1"

# Cryptography (signature recovery for from-field verification)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true